--- a/public/index.html
+++ b/public/index.html
@@ -6,10 +6,10 @@
     <meta name="viewport" content="width=device-width,initial-scale=1.0">
     <link rel="shortcut icon" href="<%= webpackConfig.output.publicPath %>favicon.ico">
     <title>字幕转文本</title>
-    <link href="https://fonts.googleapis.com/css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
-    <link href="https://cdn.jsdelivr.net/npm/@mdi/font@5.x/css/materialdesignicons.min.css" rel="stylesheet">
+    <link href="./fonts.googleapis.com/css.css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
+    <link href="./css/materialdesignicons.min.css" rel="stylesheet">
     <!-- 百度统计 -->
-    <script>
+    <!-- <script>
       var _hmt = _hmt || [];
       (function() {
         var hm = document.createElement("script");
@@ -17,7 +17,7 @@
         var s = document.getElementsByTagName("script")[0]; 
         s.parentNode.insertBefore(hm, s);
       })();
-    </script>
+    </script> -->
   </head>
   <body>
     <noscript>
