--- a/public/index.html
+++ b/public/index.html
@@ -8,6 +8,7 @@
     <title>字幕转文本</title>
     <link href="./fonts.googleapis.com/css.css?family=Roboto:100,300,400,500,700,900" rel="stylesheet">
     <link href="./css/materialdesignicons.min.css" rel="stylesheet">
+    <!-- <link href="./sw.js" rel="stylesheet"> -->
     <!-- 百度统计 -->
     <!-- <script>
       var _hmt = _hmt || [];
